--- a/src/app/pages/admin/manage-rooms/manage-rooms.component.html
+++ b/src/app/pages/admin/manage-rooms/manage-rooms.component.html
@@ -199,9 +199,9 @@
                     <div class="col-span-2">
                         <label for="room-name" class="block text-sm font-medium text-gray-900 dark:text-white">Room
                             Name</label>
-                        <input type="text" id="room-name" name="room-name"
+                        <input type="text" id="room-name" name="room-name" [(ngModel)]="newRoom.name"
                             class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                            placeholder="Ocean View Room" required>
+                            placeholder="Enter room name" required>
                     </div>
 
                     <!-- Room Code -->
@@ -209,18 +209,18 @@
                         <label for="rating"
                             class="block text-sm font-medium text-gray-900 dark:text-white">Rating</label>
                         <input type="number" id="rating" name="rating" min="1" max="5" step="1.0" id="room-code"
-                            name="rating"
+                            name="rating"  [(ngModel)]="newRoom.rating"
                             class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                            placeholder="5.0" required>
+                            placeholder="Enter room rating" required>
                     </div>
 
                     <!-- Price -->
                     <div>
                         <label for="price" class="block text-sm font-medium text-gray-900 dark:text-white">Price
                             (Rs.)</label>
-                        <input type="number" id="price" name="price"
+                        <input type="number" id="price" name="price" [(ngModel)]="newRoom.price"
                             class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                            placeholder="150" required>
+                            placeholder="Enter room price (per night)" required>
                     </div>
 
                 </div>
@@ -229,9 +229,9 @@
                 <div>
                     <label for="description"
                         class="block text-sm font-medium text-gray-900 dark:text-white">Description</label>
-                    <textarea id="description" rows="3" name="description"
+                    <textarea id="description" rows="3" name="description" [(ngModel)]="newRoom.description"
                         class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                        placeholder="A cozy room with stunning views of the ocean, ideal for solo travelers or business trips."
+                        placeholder="Describe the room"
                         required></textarea>
                 </div>
 
@@ -239,53 +239,53 @@
                 <div class="grid grid-cols-2 gap-4">
                     <div>
                         <label for="type" class="block text-sm font-medium text-gray-900 dark:text-white">Type</label>
-                        <input type="text" id="type" name="type"
+                        <input type="text" id="type" name="type" [(ngModel)]="newRoom.type"
                             class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                            placeholder="Single" required>
+                            placeholder="Enter type of room" required>
                     </div>
                     <div>
                         <label for="capacity"
                             class="block text-sm font-medium text-gray-900 dark:text-white">Capacity</label>
-                        <input type="number" id="capacity" name="capacity"
+                        <input type="number" id="capacity" name="capacity" [(ngModel)]="newRoom.capacity"
                             class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                            placeholder="1" required>
+                            placeholder="Enter room capacity" required>
                     </div>
                     <div class="col-span-2">
                         <label for="features"
                             class="block text-sm font-medium text-gray-900 dark:text-white">Features</label>
-                        <input type="text" id="features" name="features"
+                        <input type="text" id="features" name="features" [(ngModel)]="newRoom.features"
                             class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                            placeholder="Air conditioning, Mini bar, Coffee maker" required>
+                            placeholder="Enter features of room" required>
                     </div>
                     <div>
                         <label for="bed-type" class="block text-sm font-medium text-gray-900 dark:text-white">Bed
                             Type</label>
-                        <input type="text" id="bed-type" name="bed-type"
+                        <input type="text" id="bed-type" name="bed-type" [(ngModel)]="newRoom.bedType"
                             class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                            placeholder="Single" required>
+                            placeholder="Enter bed type of room" required>
                     </div>
                     <div>
                         <label for="view" class="block text-sm font-medium text-gray-900 dark:text-white">View</label>
-                        <input type="text" id="view" name="view"
+                        <input type="text" id="view" name="view" [(ngModel)]="newRoom.view"
                             class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-                            placeholder="Ocean" required>
+                            placeholder="Enter the view of room" required>
                     </div>
                     <div>
                         <label for="internet" class="block text-sm font-medium text-gray-900 dark:text-white">Internet
                             Access</label>
-                        <select id="internet" name="internet"
+                        <select id="internet" name="internet" [(ngModel)]="newRoom.internetAccess"
                             class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white">
-                            <option value="Yes">Yes</option>
-                            <option value="No">No</option>
+                            <option [value]="true">Yes</option>
+                            <option [value]="false">No</option>
                         </select>
                     </div>
                     <div>
                         <label for="television"
                             class="block text-sm font-medium text-gray-900 dark:text-white">Television</label>
-                        <select id="television" name="television"
+                        <select id="television" name="television" [(ngModel)]="newRoom.television"
                             class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg p-2.5 w-full dark:bg-gray-700 dark:border-gray-600 dark:text-white">
-                            <option value="Yes">Yes</option>
-                            <option value="No">No</option>
+                            <option [value]="true">Yes</option>
+                            <option [value]="false">No</option>
                         </select>
                     </div>
                 </div>
@@ -328,7 +328,7 @@
                 </div>
 
                 <!-- Submit Button -->
-                <button type="submit"
+                <button type="submit" (click)="addRoom()"
                     class="mt-4 font-bold text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                     Add Room
                 </button>
