--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="bg-white border-gray-200 dark:bg-gray-900 mx-5">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a routerLink="" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="public/images/logo.png" class="h-8" alt="Tropical Heven Logo" />
+            <img src="C:\Users\LENOVO\Downloads\Rectangle 3.png" class="h-8" alt="Tropical Heven Logo" />
         </a>
         <div class="flex items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse relative">
             <!-- User Menu Button -->
